@@ -4,6 +4,7 @@
 	* HilbertArray.tensor
 	* HilbertArray.is_positive
 	* HilbertArray.eigvalsh
+	* HilbertArray.eigproj
 	* HilbertSpace.random_povm_element
 	* experimental: non-commutative graphs
 	* fixes for the way TensorSubspace deals with dtype, etc.
